[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Scripts/Options.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Scenes/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/UI/Scripts/OptionsButton.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/Scenes/MenuNoPages.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Themes/MenuTheme.tres" type="Theme" id=5]

[node name="Options" instance=ExtResource( 4 )]
script = ExtResource( 1 )

[node name="MarginContainer" parent="CenterContainer/TextureRect" index="0"]
margin_right = 725.0

[node name="CaptionBlock" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer" index="0"]
margin_bottom = 33.0

[node name="Caption" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/CaptionBlock" index="0"]
text = "Options"

[node name="Separator" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/CaptionBlock" index="1"]
margin_top = 25.0
margin_bottom = 33.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 37.0
margin_right = 650.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="Button" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="0" instance=ExtResource( 2 )]
margin_right = 210.0
text = "Graphics"
script = ExtResource( 3 )

[node name="Button2" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="1" instance=ExtResource( 2 )]
margin_left = 220.0
margin_right = 430.0
text = "Hotkeys"
script = ExtResource( 3 )

[node name="Button3" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" index="2" instance=ExtResource( 2 )]
margin_left = 440.0
margin_right = 650.0
text = "Game"
script = ExtResource( 3 )

[node name="OptionsContainer" type="GridContainer" parent="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer" index="2"]
margin_top = 64.0
margin_right = 650.0
margin_bottom = 64.0
theme = ExtResource( 5 )
[connection signal="button" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_Signal"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" to="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button" method="_on_Button_pressed" binds= [ "graphics" ]]
[connection signal="button" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button_Signal"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2" to="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2" method="_on_Button_pressed" binds= [ "hotkeys" ]]
[connection signal="button" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button_Signal"]
[connection signal="pressed" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3" to="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3" method="_on_Button_pressed" binds= [ "game" ]]
[connection signal="config_done" from="CenterContainer/TextureRect/MarginContainer/HBoxContainer/VBoxContainer/OKButton" to="." method="_on_Config_Done"]
